Fix FIXME's in JSTrackCustom now that AudioTrack and VideoTrack exist. https://bugs.webkit.org/show_bug.cgi?id=136552

Reviewed by Eric Carlson.

* bindings/js/JSTrackCustom.cpp:
(WebCore::toTrack): Add casts for AudioTrack and VideoTrack.


Canonical link: https://commits.webkit.org/154554@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173513 268f45cc-cd09-0410-ab3c-d52691b4dbfc